Add Activity Beskrining and Change delete button

--- a/LMS-Lexicon/Views/Activities/Delete.cshtml
+++ b/LMS-Lexicon/Views/Activities/Delete.cshtml
@@ -40,7 +40,7 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="@Model.CourseId" />
         <input type="hidden" asp-for="@Model.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Ta bort" class="btn btn-danger" /> |
 
         <a asp-action="Details" asp-controller="Courses" asp-route-Id="@Model.CourseId"><i class="fas fa-list-alt fa-lg"></i></a>
     </form>
