--- a/LMS-Lexicon/Views/Api/Index.cshtml
+++ b/LMS-Lexicon/Views/Api/Index.cshtml
@@ -38,13 +38,13 @@
                 <tr>
                     <th>
                         @*@Html.DisplayNameFor(model => model.Name)*@
-                        @Html.ActionLink("Nam", "Index", new { sortOrder = ViewBag.NameSortParm })
+                        @Html.ActionLink("Namn", "Index", new { sortOrder = ViewBag.NameSortParm })
                     </th>
                     <th>
                         @*@Html.DisplayNameFor(model => model.Age)*@
                         Ålder
                     </th>
-                    <th></th>
+                    @*<th></th>*@
                 </tr>
             </thead>
             <tbody>
