--- a/LMS-Lexicon/Views/Courses/Details.cshtml
+++ b/LMS-Lexicon/Views/Courses/Details.cshtml
@@ -86,7 +86,7 @@
                                 <div id="@modid" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
                                     <div class="card-body">
                                         <div class="row">
-                                            <div class="col-sm-12 col-md-12 col-lg-4">
+                                            <div class="col-sm-12 col-md-12 col-lg-12">
                                                 <h6>Modul:</h6>
                                                 <h5>@module.Name</h5>
                                                 <p><b>Startdatum:</b>  @module.StartDate</p>
@@ -94,7 +94,9 @@
                                                 <p><b>Beskrivning:</b> @module.Description</p>
                                                 @*@module.Id*@
                                             </div>
-                                            <div class="col-sm-12 col-md-12 col-lg-8">
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-sm-12 col-md-12 col-lg-12">
                                                 <table class="table">
                                                     <thead>
                                                         <tr>
@@ -110,6 +112,9 @@
                                                             <th>
                                                                 Beskrivning
                                                             </th>
+                                                            @*<th>
+                                                                Aktivitetstyp
+                                                            </th>*@
                                                             <th></th>
                                                         </tr>
                                                     </thead>
@@ -119,28 +124,30 @@
                                                         {
                                                             @if (activity.ModuleId == module.Id)
                                                             {
-                                                        <tr>
-                                                            <td>
-                                                                @activity.Name
-                                                            </td>
-                                                            <td>
-                                                                @activity.StartDate.ToShortDateString()
-                                                            </td>
-                                                            <td>
-                                                                @activity.StartDate.ToShortTimeString()
-                                                            </td>
-                                                            <td>
-                                                                @activity.Description
-                                                            </td>
-                                                            <td>
-                                                                @if (User.IsInRole("Teacher"))
-                                                                {
-                                                                    @: &nbsp;
-                                                                    <a asp-action="Edit" asp-controller="Activities" asp-route-courseid="@module.CourseId" asp-route-activtyid="@activity.Id"><i class="fas fa-edit"></i></a> @:|
-                                                                    <a asp-action="Delete" asp-controller="Activities" asp-route-courseid="@module.CourseId" asp-route-activityid="@activity.Id"><i class="fas fa-trash-alt"></i></a>
-                                                                }
-                                                            </td>
-                                                        </tr>
+                                                                <tr>
+                                                                    <td>
+                                                                        @activity.Name
+                                                                    </td>
+                                                                    <td>
+                                                                        @activity.StartDate.ToShortDateString()
+                                                                    </td>
+                                                                    <td>
+                                                                        @activity.StartDate.ToShortTimeString()
+                                                                    </td>
+                                                                    <td>
+                                                                        @activity.Description
+                                                                    </td>
+                                                                    @*<td>
+                                        @activity.ActivityType
+                                    </td>*@
+                                                                    <td class="activity_edit_td">
+                                                                        @if (User.IsInRole("Teacher"))
+                                                                        {
+                                                                            <a asp-action="Edit" asp-controller="Activities" asp-route-courseid="@module.CourseId" asp-route-activityid="@activity.Id"><i class="fas fa-edit"></i></a> @:|
+                                                                            <a asp-action="Delete" asp-controller="Activities" asp-route-courseid="@module.CourseId" asp-route-activityid="@activity.Id"><i class="fas fa-trash-alt"></i></a>
+                                                                        }
+                                                                    </td>
+                                                                </tr>
                                                             }
                                                         }
                                                     <tbody>
