--- a/LMS-Lexicon/wwwroot/css/site.css
+++ b/LMS-Lexicon/wwwroot/css/site.css
@@ -85,3 +85,8 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+/*  Activity tavle properties*/
+.activity_edit_td{
+    width: 5em;
+}
