--- a/LMS-Lexicon/Views/Api/Delete.cshtml
+++ b/LMS-Lexicon/Views/Api/Delete.cshtml
@@ -3,12 +3,9 @@
 @{
     ViewData["Title"] = "Delete";
 }
-
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<br/>
+<h4>Är du säker på att du vill ta bort den här författaren?</h4>
 <div>
-    <h4>Author</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -34,6 +31,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="AuthorId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">&nbsp;<i class="fas fa-list-alt fa-lg"></i></a>
     </form>
 </div>
