--- a/LMS-Lexicon/Views/Courses/Details.cshtml
+++ b/LMS-Lexicon/Views/Courses/Details.cshtml
@@ -61,7 +61,7 @@
                             <div class="card">
                                 <div class="card-header" id="headingFive">
                                     <div class="row">
-                                        <div class="col-md-6 col-lg-8 py-1">
+                                        <div class="col-md-6 col-lg-9 py-1">
                                             <button class="btn btn-primary btn-sm collapsed" data-toggle="collapse" data-target="#@modid" aria-expanded="false" aria-controls="@modid">
                                                 @module.Name
                                             </button>
@@ -73,12 +73,10 @@
                                             }
 
                                         </div>
-                                        <div class="col-md-6 col-lg-4 py-1 float-right">
+                                        <div class="col-md-6 col-lg-3 py-1 pl-md-2 pl-lg-5 float-right">
                                             @if (User.IsInRole("Teacher"))
                                             {
                                                 <a asp-action="Create" asp-controller="Activities" asp-route-courseId="@module.CourseId" asp-route-moduleId="@module.Id" class="btn btn-success btn-sm text-white"> Lägg till Aktivitet <i class="fa fa-plus"></i></a>
-                                                <a class="pl-2" asp-action="Edit" asp-controller="Activities" asp-route-moduleId="@module.Id"><i class="fas fa-edit"></i></a> @:|
-                                                <a asp-action="Delete" asp-controller="Activities" asp-route-Id="@module.Id"><i class="fas fa-trash-alt"></i></a>
                                             }
                                         </div>
                                     </div>
