Fixed to show activity type.

--- a/LMS-Lexicon/Views/Api/Create.cshtml
+++ b/LMS-Lexicon/Views/Api/Create.cshtml
@@ -5,8 +5,8 @@
 }
 
 @*<h1>Ny författare</h1>*@
-
-  <h4>Författare</h4>
+<br/>
+  <h4>Lägg till författare</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -35,7 +35,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Tillbaka</a>
+    <a asp-action="Index"><i class="fas fa-list-alt fa-lg"></i></a>
 </div>
 
 @section Scripts {
