--- a/LMS-Lexicon/Views/Teacher/Index.cshtml
+++ b/LMS-Lexicon/Views/Teacher/Index.cshtml
@@ -12,7 +12,7 @@
     <div class="col-md-3 px-sm-1 px-md-4 px-lg-6">
         <form asp-action="GetUsersByRole" class="input-group ml-1" id="RoleForm" data-ajax="true" data-ajax-method="GET" data-ajax-update="#UsersList" data-ajax-mode="replace">
             <select asp-for="RoleId" asp-items="@await rolesSelect.GetUserRolessAsync()" class="form-control form-control form-control-sm">
-                <option selected="selected" value="">Välj roll</option>
+                <option disabled selected value="">-- Välj roll --</option>
             </select>
         </form>
     </div>
