--- a/LMS-Lexicon/Views/Api/Create.cshtml
+++ b/LMS-Lexicon/Views/Api/Create.cshtml
@@ -28,7 +28,7 @@
                 <span asp-validation-for="BirthDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Lägg till" class="btn btn-primary" />
             </div>
         </form>
     </div>
