Fixed  delete course

--- a/LMS-Lexicon/Views/Api/Delete.cshtml
+++ b/LMS-Lexicon/Views/Api/Delete.cshtml
@@ -33,7 +33,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="AuthorId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Ta bort" class="btn btn-danger" /> |
         <a asp-action="Index">&nbsp;<i class="fas fa-list-alt fa-lg"></i></a>
     </form>
 </div>
