Just need to write dates for  creating and edit Modules-

--- a/LMS-Lexicon/Views/Courses/Details.cshtml
+++ b/LMS-Lexicon/Views/Courses/Details.cshtml
@@ -26,11 +26,11 @@
                 <div class="card-header" id="headingOne">
                     <h6 class="mb-0">
                         <p>Kursstartdatum : @Model.StartDate.ToShortDateString() </p>
-                        <p>Beskrivning : @Model.Description </p>
+                        @*<p>Beskrivning : @Model.Description </p>*@
                     </h6>
                 </div>
             </div>
-            @*<div class="card">
+            <div class="card">
                     <div class="card-header" id="headingOne">
                         <h2 class="mb-0">
                             <button class="btn btn-link btn-block text-left text-dark font-weight-bold" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseOne">
@@ -43,7 +43,7 @@
                             <p>@Model.Description </p>
                         </div>
                     </div>
-                </div>*@
+                </div>
             <div class="card">
                 <div class="card-header" id="headingThree">
                     <h2 class="mb-0">
