--- a/LMS-Lexicon/Views/Modules/Edit.cshtml
+++ b/LMS-Lexicon/Views/Modules/Edit.cshtml
@@ -19,12 +19,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="StartDate" class="control-label"></label>
-                <input asp-for="StartDate" class="form-control" />
+                <input asp-for="StartDate" asp-format="@Model.StartDate.ToString($"{0:yyyy-MM-dd}")"  class="form-control" />
                 <span asp-validation-for="StartDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="EndDate" class="control-label"></label>
-                <input asp-for="EndDate" class="form-control" />
+                <input asp-for="EndDate" asp-format="@Model.EndDate.ToString($"{0:yyyy-MM-dd}")"  class="form-control" />
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
             <div class="form-group">
